# splitby

./: .gitignore  Cargo.toml  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  REMAINING_FEATURES.md  ROADMAP.md  benchmark.sh  new-docs.md  planned-features.md  profile.sh  readme.md  rust-plan.md  splitby.sh  splitget.sh  test.sh
.github/workflows/: astro.yml  homebrew.yml  release.yml
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: basics.mdx  faq.mdx  index.mdx  install.mdx  modes.mdx
docs/src/content/docs/flags/: align.mdx  bytes.mdx  characters.mdx  count.mdx  delimiter.mdx  fields.mdx  index.mdx  input.mdx  invert.mdx  join.mdx  output.mdx  per-line.mdx  placeholder.mdx  (+9 more)
docs/src/styles/: custom.css
planning-docs/: bugs.md  new-docs.md  planned-features.md
planning-docs/ai-docs/: REMAINING_FEATURES.md
src/: input.rs  main.rs  output.rs  transform.rs  types.rs  width.rs  worker.rs
src/cli/: help_version.rs  mod.rs  parse.rs  types.rs  utilities.rs  validation.rs
src/input/: get_largest_field_widths.rs  mod.rs  scan_field_widths.rs
src/output/: mod.rs
src/processing/: get_results.rs  process_records.rs  read_input.rs  scan_field_widths.rs
src/processing/process_records/: process_bytes.rs  process_chars.rs  process_fields.rs  worker_utilities.rs
src/transform/: mod.rs  process_bytes.rs  process_chars.rs  process_fields.rs  transform_utilities.rs  worker_utilities.rs
src/workers/: process_bytes.rs  process_chars.rs  process_fields.rs  worker_utilities.rs
tests/: cli_tests.rs  tests.rs
(+11 files in other folders)
