[package]
name = "splitby"
version = "1.2.1"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
fancy-regex = "0.16.2"
regex = "1.12.2"
unicode-segmentation = "1.12.0"

[dev-dependencies]
assert_cmd = "2"

[profile.release]
debug = false
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
