[package]
name = "splitby"
version = "1.2.2"
edition = "2024"
description = "Split text by a regex delimiter — a powerful, multi-threaded alternative to cut"
readme = "readme.md"
license = "MIT"
repository = "https://github.com/serenacula/splitby"
homepage = "https://github.com/serenacula/splitby"
keywords = ["split", "text", "regex", "cli", "cut"]
categories = ["command-line-utilities"]

[dependencies]
crossbeam = "0.8.4"
fancy-regex = "0.16.2"
regex = "1.12.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.1"

[dev-dependencies]
assert_cmd = "2"

[profile.dist]
inherits = "release"

[profile.release]
debug = false
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
